[package]
name = "korq"
version = "0.1.0"
description = "Kubernetes Dynamic Log Tailing Utility"
documentation = "https://docs.rs/korq"
homepage = "https://vertexclique.github.io/korq"
authors = ["Mahmut Bulut <vertexclique@gmail.com>"]
exclude = ["doc/**", "assets/**"]
keywords = ["kubernetes", "korq", "logging", "infrastructure", "cluster", "pod"]
categories = ["development-tools", "command-line-utilities"]
repository = "https://github.com/vertexclique/korq"
edition = "2018"
license = "MIT"
readme = "README.md"

[dependencies]
dirs = "1.0.4"
backtrace = "0.3"
carboxyl = "0.2.1"
clap = "2.32.0"
qube = "0.1.0"
