[package]
name = "korq"
version = "0.3.0"
description = "Kubernetes Dynamic Log Tailing Utility"
documentation = "https://docs.rs/korq"
homepage = "https://vertexclique.github.io/korq"
authors = ["Mahmut Bulut <vertexclique@gmail.com>"]
exclude = ["doc/**", "assets/**", "docs/**", "ci/**"]
keywords = ["kubernetes", "logging", "infrastructure", "cluster", "pod"]
categories = ["development-tools", "command-line-utilities"]
repository = "https://github.com/vertexclique/korq"
license = "MIT"
readme = "README.md"

[dependencies]
dirs = "1.0.4"
backtrace = "0.3"
carboxyl = "0.2.1"
clap = "2.32.0"
reqwest = "0.9.3"
futures = "0.1.23"
openssl = "0.10.15"
tokio = "0.1.11"
colored = "1.6"
rand = "0.5.5"
qube = "0.3.0"
